# pft-zk-compliance

./: .gitignore  0001-Move-oracle-authorization-into-circuit.patch  CONTEXT.md  Cargo.toml  DEPENDENCY_PINS.md  SPEC.md
.ai/: CONTEXT.md  DEVLOG.md  HANDOFF.md
.claude/: settings.local.json
crates/compliance-circuit/: Cargo.toml
crates/compliance-circuit/src/: circuit.rs  lib.rs
crates/compliance-sidecar/: Cargo.toml
crates/compliance-sidecar/src/: main.rs
docs/: PAXOS_WITNESS_PROTOCOL.md  SPEC.md  circuit_io.md
docs/adr/: 0001-schnorr-over-pasta-oracle-authorization.md
target-local/: .rustc_info.json
target-local/debug/.fingerprint/autocfg-38d501c17e68b38c/: output-lib-autocfg
target-local/debug/.fingerprint/cfg-if-2d20780be38939e6/: output-lib-cfg_if
target-local/debug/.fingerprint/crossbeam-utils-3facd263110404aa/: build-script-build-script-build  build-script-build-script-build.json
target-local/debug/.fingerprint/funty-d1ea7ba734af2c01/: output-lib-funty
target-local/debug/.fingerprint/libc-8ca02912241efd47/: build-script-build-script-build  build-script-build-script-build.json
target-local/debug/.fingerprint/proc-macro2-94cad8ea6a6e7259/: build-script-build-script-build  build-script-build-script-build.json
target-local/debug/.fingerprint/quote-7f25ee22a5499f38/: build-script-build-script-build  build-script-build-script-build.json
target-local/debug/.fingerprint/radium-f95c1cbd9beb28e2/: build-script-build-script-build  build-script-build-script-build.json
target-local/debug/.fingerprint/subtle-5ae6e888627ae82f/: output-lib-subtle
(+11 files in other folders)
