[package]
name = "compliance-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", rev = "198e9ae30d322cd0ad003b6955f91ec095b1490d" }
ff = "0.13"
group = "0.13"
halo2_poseidon = "0.1.0"

[dev-dependencies]
rand = "0.8"
halo2curves = "0.7"
