[package]
name = "compliance-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
compliance-circuit = { path = "../compliance-circuit" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
