[package]
name = "compliance-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
compliance-circuit = { path = "../compliance-circuit" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", rev = "198e9ae30d322cd0ad003b6955f91ec095b1490d" }
halo2curves = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_core = "0.6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
